Fixed paragraph spacing

--- a/lecture-capture/src/index.css
+++ b/lecture-capture/src/index.css
@@ -30,14 +30,8 @@ h4 {
   font-style: italic;
 }
 
-/* Apply style to a p within any other element */
-* p {
-  margin-bottom: 1rem;
-}
-
-
 p {
-  margin-bottom: 0rem;
+  margin-bottom: 1rem;
 }
 
 hr {
